@@ -3,6 +3,7 @@ Revision history for Cassandra-Client
 0.11    unreleased
 
       * Stricter and faster reference checks
+      * Deduplicate parallel prepare() calls for the same query
 
 0.10    2017/01/30
 
